# x-reader

./: .env.example  .gitignore  LICENSE  README.md  mcp_server.py  pyproject.toml
x_reader/: __init__.py  cli.py  reader.py  schema.py
x_reader/fetchers/: bilibili.py  browser.py  jina.py  rss.py  telegram.py  twitter.py  wechat.py  xhs.py  youtube.py
x_reader/utils/: storage.py  url_validator.py
